Bug 431442 - "Fetching updates" view needs more progress information
Summary: "Fetching updates" view needs more progress information
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: 5.20.5
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: usability
: 481696 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-01-11 14:58 UTC by Juho
Modified: 2025-09-06 00:07 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juho 2021-01-11 14:58:26 UTC
SUMMARY
"Fetching updates" view needs more progress information

STEPS TO REPRODUCE
1. Open Discover
2. Fetching updates view stays out 1 minute without progress monitor


EXPECTED RESULT
1. Open Discover
2. Fetching updates show better what it is doing, maybe it should tell what mirror it's analyzing and how many to go until all is  checked

SOFTWARE/OS VERSIONS 
Linux/KDE Plasma: KDE Neon, 5.20.5
Comment 1 Nate Graham 2021-01-12 00:57:17 UTC
Yeah, I agree.

Ideally it wouldn't take forever, but given that it often does, more information is better than less.
Comment 2 Nate Graham 2024-02-23 22:19:28 UTC
*** Bug 481696 has been marked as a duplicate of this bug. ***
Comment 3 MW Gilbert 2025-07-27 02:39:03 UTC
In my case, Fetching updates .....  is an infinite process.
Comment 4 Aleix Pol 2025-09-04 17:44:44 UTC
Git commit c01a209bc4cfda580c4fb80ebf06fc5f3cccf2f3 by Aleix Pol.
Committed on 04/09/2025 at 17:42.
Pushed by apol into branch 'master'.

UpdatesPage: Improve feedback when refreshing

Show which backends are still refreshing, hopefully making the wait more
meaningful.

M  +1    -0    discover/qml/UpdatesPage.qml
M  +1    -1    libdiscover/backends/DummyBackend/DummyBackend.cpp
M  +15   -0    libdiscover/resources/ResourcesModel.cpp
M  +2    -0    libdiscover/resources/ResourcesModel.h

https://invent.kde.org/plasma/discover/-/commit/c01a209bc4cfda580c4fb80ebf06fc5f3cccf2f3