UpdatesPage: Improve feedback when refreshing

Show which backends are still refreshing, hopefully making the wait more
meaningful.

BUG: 431442